--- a/code/manuscript_altanalysis.Rmd
+++ b/code/manuscript_altanalysis.Rmd
@@ -1953,8 +1953,8 @@ for (k in 1:9){
       data = df.z.temp2, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 1 | ID + Year ,
-        #first_stage = ~ TotalPop + PctMedicaid + PctUninsured + PctPoverty + PctBlack + PctHispanic + PctChildren + PctElderly | ID + Year ,
+        #first_stage = ~ 1 | ID + Year ,
+        first_stage = ~ TotalPop + PctMedicaid + PctUninsured + PctPoverty + PctBlack + PctHispanic + PctChildren + PctElderly | ID + Year ,
         second_stage = ~ i(Tx * (1 - DirectlyTreated), ref = FALSE)  + I(Tx * DirectlyTreated),
       #second_stage = ~ i(Tx , ref = FALSE)  + I(Tx * DirectlyTreated),
         cluster_var = "ID",
